--- a/src/app/modules/blockchain/marketing/rewards.component.html
+++ b/src/app/modules/blockchain/marketing/rewards.component.html
@@ -14,16 +14,10 @@
         <div
           class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body"
         >
-          <h1 i18n="@@COMMON__MINDS_REWARDS">
-            Minds Rewards
-          </h1>
+          <h1 i18n="@@COMMON__MINDS_REWARDS">Minds Rewards</h1>
 
-          <h2
-            ngPreserveWhitespaces
-            i18n="@@COMMON__EARN_TOKENS_FOR_CONTRIBUTIONS"
-          >
-            Earn tokens for your
-            <em>contributions to the network</em>
+          <h2 i18n="@@COMMON__EARN_TOKENS_FOR_CONTRIBUTIONS">
+            Earn tokens for your<em>contributions to the network</em>
           </h2>
 
           <p
@@ -124,7 +118,10 @@
             </ul>
           </div>
           <div
-            class="m-grid__column-6 m-grid__column-12--mobile m-marketing__image"
+            class="
+              m-grid__column-6 m-grid__column-12--mobile
+              m-marketing__image
+            "
           >
             <span>
               <img
@@ -164,8 +161,11 @@
             </p>
 
             <ul class="m-marketing__points">
-              <li i18n="@@COMMON__REFERRALS">
-                Referrals =
+              <li>
+                <ng-container i18n="@@COMMON__REFERRALS"
+                  >Referrals</ng-container
+                >
+                =
                 <em
                   >{contributionValues.referrals, plural, =1
                   {{{contributionValues.referrals}} point} other
@@ -175,7 +175,10 @@
             </ul>
           </div>
           <div
-            class="m-grid__column-6 m-grid__column-12--mobile m-marketing__image"
+            class="
+              m-grid__column-6 m-grid__column-12--mobile
+              m-marketing__image
+            "
           >
             <span>
               <img
@@ -228,7 +231,10 @@
             </div>
           </div>
           <div
-            class="m-grid__column-6 m-grid__column-12--mobile m-marketing__image"
+            class="
+              m-grid__column-6 m-grid__column-12--mobile
+              m-marketing__image
+            "
           >
             <span>
               <img
@@ -254,7 +260,10 @@
       <div class="m-marketing__section m-marketing__section--tail">
         <div class="m-grid m-marketing__wrapper">
           <div
-            class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body"
+            class="
+              m-grid__column-12 m-grid__column-12--mobile
+              m-marketing__body
+            "
           >
             <h2 i18n="@@COMMON__OTHER_REWARDS">Other Rewards</h2>
           </div>
@@ -324,7 +333,10 @@
 
         <div class="m-grid m-marketing__wrapper">
           <div
-            class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body m-marketing__body--extra"
+            class="
+              m-grid__column-12 m-grid__column-12--mobile
+              m-marketing__body m-marketing__body--extra
+            "
           >
             <m-button
               color="blue"
