--- a/src/app/modules/blockchain/token-purchase/purchase.component.html
+++ b/src/app/modules/blockchain/token-purchase/purchase.component.html
@@ -13,7 +13,7 @@
     />
 
     <label for="m-blockchainTokenPurchase__amountInput" i18n="@@COMMON__TOKENS"
-      >tokens</label
+      >Tokens</label
     >
   </div>
 
