--- a/src/app/modules/blockchain/token-purchase/v2/buy-tokens-modal.component.html
+++ b/src/app/modules/blockchain/token-purchase/v2/buy-tokens-modal.component.html
@@ -57,12 +57,14 @@
         class="m-buyTokensBodyTermsCheck__label"
         for="terms-check"
         i18n="@@M__PURCHASE_TERMS"
-        >I have read and accept the
+      >
+        I have read and accept the
         <a
           href="https://cdn-assets.minds.com/front/dist/assets/documents/TermsOfSale-v0.1.pdf"
           target="_blank"
-          >Minds Token Terms Of Sale
-        </a>
+          >Terms Of Sale</a
+        >
+        for the Minds Token
       </label>
     </div>
 
