--- a/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
+++ b/src/app/modules/blockchain/transaction-overlay/transaction-overlay.component.html
@@ -143,8 +143,8 @@
           </div>
 
           <div class="m--blockchain--transaction-overlay--field">
-            <button class="m-btn" (click)="cancel()" i18n="@@COMMON__CANCEL">
-              Cancel
+            <button class="m-btn" (click)="cancel()">
+              <ng-container>Cancel</ng-container>
             </button>
 
             <button
