--- a/src/app/modules/channels/v2/edit/edit.component.html
+++ b/src/app/modules/channels/v2/edit/edit.component.html
@@ -73,9 +73,8 @@
           [saving]="service.inProgress$ | async"
           (onAction)="onSubmit()"
           i18n="@@COMMON__SAVE"
+          >Save</m-button
         >
-          Save
-        </m-button>
       </div>
     </ng-template>
   </form>
