--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -80,7 +80,11 @@
             <span class="m-commentOwnerRow__dot">·</span>
             <span title="Mature content"
               ><i
-                class="material-icons m-material-icons-inline m-commentOwnerRowItem__explicit"
+                class="
+                  material-icons
+                  m-material-icons-inline
+                  m-commentOwnerRowItem__explicit
+                "
                 >explicit</i
               >
             </span></ng-container
@@ -334,7 +338,9 @@
                   <!-- Cancel editing -->
                   <!-- --------------------- -->
                   <li
-                    class="m-dropdownList__item m-dropdownList__item--destructive"
+                    class="
+                      m-dropdownList__item m-dropdownList__item--destructive
+                    "
                   >
                     <div
                       (click)="
@@ -405,7 +411,9 @@
             [hidden]="attachment.getMeta().title"
           ></div>
           <div
-            class="m-attachmentPreviewWrapper m-attachmentPreviewWrapper--richEmbed"
+            class="
+              m-attachmentPreviewWrapper m-attachmentPreviewWrapper--richEmbed
+            "
           >
             <div class="m-rich-embed" *ngIf="attachment.getMeta().title">
               <minds-rich-embed
