--- a/src/app/modules/composer/components/popup/nsfw/nsfw.component.html
+++ b/src/app/modules/composer/components/popup/nsfw/nsfw.component.html
@@ -34,8 +34,7 @@
       (onAction)="save()"
       data-cy="nsfw-save-button"
       i18n="@@COMMON__SAVE"
+      >Save</m-button
     >
-      Save
-    </m-button>
   </div>
 </div>
