--- a/src/app/modules/composer/components/popup/schedule/schedule.component.html
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.html
@@ -58,8 +58,7 @@
       (onAction)="save()"
       data-cy="schedule-save-button"
       i18n="@@COMMON__SAVE"
+      >Save</m-button
     >
-      Save
-    </m-button>
   </div>
 </div>
