--- a/src/app/modules/messenger/encryption/encryption.component.html
+++ b/src/app/modules/messenger/encryption/encryption.component.html
@@ -43,12 +43,12 @@
   <input
     type="password"
     placeholder="Enter a password"
-    i18n-placeholder="@@MESSENGER__ENCRYPTION__ENTER_PWD_PH"
+    i18n-placeholder="@@MESSENGER__ENCRYPTION__ENTER_NEW_PWD_PH"
     #password1
   />
   <input
     type="password"
-    placeholder="Confirm your password"
+    placeholder="Confirm password"
     i18n-placeholder="@@MESSENGER__ENCRYPTION__CONFIRM_PWD_PH"
     #password2
     (keydown.enter)="setup(password1, password2)"
@@ -81,7 +81,7 @@
   </p>
   <input
     type="password"
-    placeholder="Enter a password"
+    placeholder="Enter password"
     i18n-placeholder="@@MESSENGER__ENCRYPTION__ENTER_PWD_PH"
     #password1
   />
