--- a/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
+++ b/src/app/modules/newsfeed/activity/owner-block/owner-block.component.html
@@ -68,7 +68,7 @@
           "
           class="m-activityOwnerBlockPermalink__text--edited"
           i18n="@@M__COMMON__EDITED"
-          >edited</span
+          >Edited</span
         >
         <ng-template [ngTemplateOutlet]="boostedTag"></ng-template>
         <div
