--- a/src/app/modules/notifications/notification.component.html
+++ b/src/app/modules/notifications/notification.component.html
@@ -1094,7 +1094,7 @@
       "
     >
       <p *ngIf="notification.params.impressions">
-        <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__X_POINTS_FOR"
+        <ng-container i18n="@@NOTIFICATIONS__NOTIFICATION__X_TOKENS_FOR"
           >{{ notification.params.bid | token: 18 }} tokens
           <span *ngIf="notification.entityObj">for </span></ng-container
         >
@@ -1282,9 +1282,8 @@
         <span
           *ngIf="notification.entityObj"
           i18n="@@NOTIFICATIONS__NOTIFICATION__FOR_WORD"
+          >for</span
         >
-          for
-        </span>
         <span
           class="pseudo-link mdl-color-text--blue-grey-400"
           *ngIf="notification.entityObj && notification.entityObj.title"
@@ -1418,8 +1417,8 @@
         <span
           *ngIf="notification.entityObj"
           i18n="X points _for_ entity@@NOTIFICATIONS__NOTIFICATION__FOR_WORD"
-          >for
-        </span>
+          >for</span
+        >
         <span
           class="pseudo-link mdl-color-text--blue-grey-400"
           *ngIf="notification.entityObj && notification.entityObj.title"
@@ -1433,8 +1432,8 @@
             notification.entityObj.type !== 'user'
           "
           i18n="@@NOTIFICATIONS__NOTIFICATION__YOUR_POST"
-          >your post
-        </span>
+          >your post</span
+        >
         <span
           class="pseudo-link mdl-color-text--blue-grey-400"
           *ngIf="
@@ -1443,8 +1442,8 @@
             notification.entityObj.type === 'user'
           "
           i18n="@@NOTIFICATIONS__NOTIFICATION__YOUR_CHANNEL"
-          >your channel
-        </span>
+          >your channel</span
+        >
         <ng-container
           i18n="@@NOTIFICATIONS__NOTIFICATION__BOOST_PEER_REJECTED__NOT_CHARGED"
           >You have not been charged.</ng-container
