--- a/src/app/modules/pro/channel/footer/footer.component.html
+++ b/src/app/modules/pro/channel/footer/footer.component.html
@@ -35,8 +35,8 @@
           class="m-proChannelFooter__link"
           (click)="logout()"
           i18n="@@COMMON__LOGOUT"
-          >Logout
-        </a>
+          >Logout</a
+        >
       </ng-container>
 
       <ng-container *ngIf="!isOwner">
