--- a/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
+++ b/src/app/modules/settings-v2/account/boosted-content/boosted-content.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__BOOSTED_CONTENT__LABEL"
-  >
-    Boost
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__BOOSTED_CONTENT__LABEL">Boost</span>
   </div>
   <div
     class="m-settingsV2__desc"
