--- a/src/app/modules/settings-v2/account/messenger/messenger.component.html
+++ b/src/app/modules/settings-v2/account/messenger/messenger.component.html
@@ -1,6 +1,6 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__ACCOUNT__MESSENGER">
-    Messenger
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__ACCOUNT__MESSENGER">Messenger</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__ACCOUNT__MESSENGER__DESC">
     Choose whether you want to see the legacy messenger.
