--- a/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
+++ b/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__ACCOUNT__NSFW__LABEL"
-  >
-    NSFW Content
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__ACCOUNT__NSFW__LABEL">NSFW Content</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__ACCOUNT__NSFW__DESCRIPTION">
     Control how NSFW content is displayed in your newsfeed.
