--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__ACCOUNT__PASSWORD__LABEL"
-  >
-    Password
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__ACCOUNT__PASSWORD__LABEL">Password</span>
   </div>
   <div
     class="m-settingsV2__desc"
