--- a/src/app/modules/settings-v2/other/deactivate-account/deactivate-account.component.html
+++ b/src/app/modules/settings-v2/other/deactivate-account/deactivate-account.component.html
@@ -1,9 +1,8 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__OTHER__LEAVE__DEACTIVATE__LABEL"
-  >
-    Deactivate Account
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__OTHER__LEAVE__DEACTIVATE__LABEL"
+      >Deactivate Account</span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
