--- a/src/app/modules/settings-v2/pro/assets/assets.component.html
+++ b/src/app/modules/settings-v2/pro/assets/assets.component.html
@@ -1,6 +1,6 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__ASSETS__LABEL">
-    Assets
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__ASSETS__LABEL">Assets</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__ASSETS__DESCRIPTION">
     Upload custom logo and background images.
