--- a/src/app/modules/settings-v2/pro/cancel/cancel.component.html
+++ b/src/app/modules/settings-v2/pro/cancel/cancel.component.html
@@ -1,9 +1,8 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__PRO__SUBSCRIPTION__CANCEL__LABEL"
-  >
-    Cancel Pro Subscription
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__SUBSCRIPTION__CANCEL__LABEL"
+      >Cancel Pro Subscription</span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
