--- a/src/app/modules/settings-v2/pro/domain/domain.component.html
+++ b/src/app/modules/settings-v2/pro/domain/domain.component.html
@@ -1,6 +1,6 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__DOMAIN__LABEL">
-    Domain
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__DOMAIN__LABEL">Domain</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__DOMAIN__DESCRIPTION">
     Contact info@minds.com to customize your site domain.
