--- a/src/app/modules/settings-v2/pro/footer/footer.component.html
+++ b/src/app/modules/settings-v2/pro/footer/footer.component.html
@@ -1,6 +1,6 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__FOOTER__LABEL">
-    Footer
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__FOOTER__LABEL">Footer</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__FOOTER___DESCRIPTION">
     Set up your site's footer links.
