--- a/src/app/modules/settings-v2/pro/general/general.component.html
+++ b/src/app/modules/settings-v2/pro/general/general.component.html
@@ -1,6 +1,11 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__GENERAL__LABEL">
-    General Settings
+  <div class="m-settingsV2__headerLabel">
+    <span
+      ><ng-container i18n="@@SETTINGS__PRO__GENERAL__LABEL"
+        >General</ng-container
+      >
+      <ng-container i18n="@@COMMON__SETTINGS">Settings</ng-container></span
+    >
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__GENERAL__DESCRIPTION">
     Customize your title and headline.
