--- a/src/app/modules/settings-v2/pro/payouts/payouts.component.html
+++ b/src/app/modules/settings-v2/pro/payouts/payouts.component.html
@@ -1,6 +1,6 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__PAYOUTS__LABEL">
-    Payouts
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__PAYOUTS__LABEL">Payouts</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__PAYOUTS__DESCRIPTION">
     Select the currency type you wish you be paid out in. Please note payouts
