--- a/src/app/modules/settings-v2/pro/theme/theme.component.html
+++ b/src/app/modules/settings-v2/pro/theme/theme.component.html
@@ -1,6 +1,6 @@
 <m-settingsV2__header>
-  <div class="m-settingsV2__headerLabel" i18n="@@SETTINGS__PRO__THEME__LABEL">
-    Theme
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__THEME__LABEL">Theme</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__THEME__DESCRIPTION">
     Set up your site's color theme.
