--- a/src/app/modules/suggestions/channel/sidebar.component.html
+++ b/src/app/modules/suggestions/channel/sidebar.component.html
@@ -102,9 +102,9 @@
 <!-- The below is hack because angular does not extract $localize strings-->
 <ng-container *ngIf="false">
   <ng-container i18n="@@SUGGESTIONS__CHANNEL__TITLE"
-    >Suggested Channels
-  </ng-container>
+    >Suggested Channels</ng-container
+  >
   <ng-container i18n="@@SUGGESTIONS__GROUP__TITLE"
-    >Suggested Groups
-  </ng-container>
+    >Suggested Groups</ng-container
+  >
 </ng-container>
