--- a/src/app/modules/upgrades/upgrade-options.component.html
+++ b/src/app/modules/upgrades/upgrade-options.component.html
@@ -29,14 +29,17 @@
             rightValue="monthly"
           ></m-toggle
         ></span>
-        <span i18n="@@COMMON__MONTHLY">Monthly</span>
+        <span i18n="@@COMMON__MONTHLY__TITLECASE">Monthly</span>
       </div>
     </div>
   </div>
 
   <div class="m-upgradesUpgradeOptions__plans">
     <div
-      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--first"
+      class="
+        m-upgradesUpgradeOptionsPlan__row
+        m-upgradesUpgradeOptionsPlan__row--first
+      "
     >
       <h3 i18n="@@UPGRADE_OPTIONS__PLUS">Minds+</h3>
 
@@ -66,14 +69,15 @@
           Verify your channel
         </li>
 
-        <li i18n="@@UPGRADE_OPTIONS__HIDE_BOOSTS">
-          Hide boosted content
-        </li>
+        <li i18n="@@UPGRADE_OPTIONS__HIDE_BOOSTS">Hide boosted content</li>
       </ul>
     </div>
 
     <div
-      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--last"
+      class="
+        m-upgradesUpgradeOptionsPlan__row
+        m-upgradesUpgradeOptionsPlan__row--last
+      "
     >
       <p>
         <a
@@ -131,7 +135,10 @@
     </div>
 
     <div
-      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--first"
+      class="
+        m-upgradesUpgradeOptionsPlan__row
+        m-upgradesUpgradeOptionsPlan__row--first
+      "
     >
       <h3 i18n="@@COMMON__PRO">Pro</h3>
 
@@ -154,9 +161,7 @@
 
     <div class="m-upgradesUpgradeOptionsPlan__row">
       <ul>
-        <li i18n="@@UPGRADE_OPTIONS__GET_PAID_WORK">
-          Get paid for your work
-        </li>
+        <li i18n="@@UPGRADE_OPTIONS__GET_PAID_WORK">Get paid for your work</li>
 
         <li i18n="@@UPGRADE_OPTIONS__BUILD_OWN_CUSTOM_SITE">
           Build your own custom website
@@ -169,7 +174,10 @@
     </div>
 
     <div
-      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--last"
+      class="
+        m-upgradesUpgradeOptionsPlan__row
+        m-upgradesUpgradeOptionsPlan__row--last
+      "
     >
       <p>
         <a
@@ -251,7 +259,10 @@
     </div>
 
     <div
-      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--first"
+      class="
+        m-upgradesUpgradeOptionsPlan__row
+        m-upgradesUpgradeOptionsPlan__row--first
+      "
     >
       <h3 i18n="@@UPGRADE_OPTIONS__NODE">Node</h3>
 
@@ -289,7 +300,10 @@
     </div>
 
     <div
-      class="m-upgradesUpgradeOptionsPlan__row m-upgradesUpgradeOptionsPlan__row--last"
+      class="
+        m-upgradesUpgradeOptionsPlan__row
+        m-upgradesUpgradeOptionsPlan__row--last
+      "
     >
       <p>
         <a
