--- a/src/app/modules/upgrades/upgrades.component.html
+++ b/src/app/modules/upgrades/upgrades.component.html
@@ -6,11 +6,10 @@
   <div class="m-marketing__main m-marketing__section--style-1">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-6 m-grid__column-12--mobile m-marketing__body">
-        <h2
-          class="m-marketing__subtitle--asTitle"
-          i18n="@@UPGRADES__UPGRADE_MINDS_EXPERIENCE"
-        >
-          Upgrade your Minds experience
+        <h2 class="m-marketing__subtitle--asTitle">
+          <ng-container i18n="@@UPGRADES__UPGRADE_MINDS_EXPERIENCE"
+            >Upgrade your Minds experience</ng-container
+          >
         </h2>
 
         <p
