--- a/src/app/modules/wallet/components/btc/btc.component.html
+++ b/src/app/modules/wallet/components/btc/btc.component.html
@@ -4,9 +4,8 @@
       routerLink="settings"
       routerLinkActive="selected"
       i18n="@@COMMON__SETTINGS"
+      >Settings</a
     >
-      Settings
-    </a>
   </li>
 </div>
 
