--- a/src/app/modules/wallet/components/tokens/onchain-transfers/onchain-transfers.component.html
+++ b/src/app/modules/wallet/components/tokens/onchain-transfers/onchain-transfers.component.html
@@ -70,7 +70,10 @@
             *ngSwitchCase="'rejected'"
           >
             <span i18n="@@ONCHAIN_TRANSFERS__REJECTED">Rejected</span>
-            <m-tooltip icon="info" i18n="@@ONCHAIN_TRANSFERS__REJECTED">
+            <m-tooltip
+              icon="info"
+              i18n="@@ONCHAIN_TRANSFERS__REJECTED_TOS_VIOLATION"
+            >
               Following review your tokens are not available for withdrawal. TOS
               violation.
             </m-tooltip>
