--- a/src/app/modules/blockchain/marketing/token.component.html
+++ b/src/app/modules/blockchain/marketing/token.component.html
@@ -14,12 +14,11 @@
         <div
           class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body"
         >
-          <h1 i18n="@@COMMON__TOKENS">
-            Tokens
-          </h1>
-
-          <h2 ngPreserveWhitespaces i18n="@@MARKETING__FUEL_OF_NETWORK">
-            The <em>fuel</em> of the Minds network
+          <h1 i18n="@@COMMON__TOKENS">Tokens</h1>
+          <h2>
+            <ng-container i18n="@@MARKETING__FUEL_OF_NETWORK"
+              >The <em>fuel</em> of the Minds network</ng-container
+            >
           </h2>
 
           <p
@@ -111,7 +110,10 @@
             </div>
           </div>
           <div
-            class="m-grid__column-6 m-grid__column-12--mobile m-marketing__image"
+            class="
+              m-grid__column-6 m-grid__column-12--mobile
+              m-marketing__image
+            "
           >
             <span>
               <img
@@ -176,7 +178,10 @@
             </div>
           </div>
           <div
-            class="m-grid__column-6 m-grid__column-12--mobile m-marketing__image"
+            class="
+              m-grid__column-6 m-grid__column-12--mobile
+              m-marketing__image
+            "
           >
             <span>
               <img
@@ -216,7 +221,10 @@
             </p>
           </div>
           <div
-            class="m-grid__column-6 m-grid__column-12--mobile m-marketing__image"
+            class="
+              m-grid__column-6 m-grid__column-12--mobile
+              m-marketing__image
+            "
           >
             <span>
               <img
@@ -240,7 +248,10 @@
       <div class="m-marketing__section m-marketing__section--tail">
         <div class="m-grid m-marketing__wrapper">
           <div
-            class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body"
+            class="
+              m-grid__column-12 m-grid__column-12--mobile
+              m-marketing__body
+            "
           >
             <h2 i18n="@@COMMON__OTHER_FEATURES">Other features</h2>
           </div>
@@ -297,15 +308,17 @@
 
         <div class="m-grid m-marketing__wrapper">
           <div
-            class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body m-marketing__body--extra"
+            class="
+              m-grid__column-12 m-grid__column-12--mobile
+              m-marketing__body m-marketing__body--extra
+            "
           >
             <m-button
               color="blue"
               (onAction)="scrollToTop()"
               i18n="@@COMMON__BUY_TOKENS"
+              >Buy tokens</m-button
             >
-              Buy Tokens
-            </m-button>
           </div>
         </div>
       </div>
