--- a/src/app/modules/channels/v2/about/about.component.html
+++ b/src/app/modules/channels/v2/about/about.component.html
@@ -12,7 +12,10 @@
           Bio
         </div>
         <div
-          class="m-channelAboutField__content m-channelAboutField__content--preserveBlanks"
+          class="
+            m-channelAboutField__content
+            m-channelAboutField__content--preserveBlanks
+          "
           [innerHtml]="channel.briefdescription | tags"
         ></div>
       </div>
@@ -21,8 +24,8 @@
         *ngIf="channel?.tags?.length"
         class="m-channelAbout__field m-channelAbout__field--fullWidth"
       >
-        <div class="m-channelAboutField__label" i18n="@@COMMON__HASHTAGS">
-          Hashtags
+        <div class="m-channelAboutField__label">
+          <ng-container i18n="@@COMMON__HASHTAGS">Hashtags</ng-container>
         </div>
         <div class="m-channelAboutField__content" ngPreserveWhitespaces>
           <ng-container *ngFor="let tag of channel.tags">
