--- a/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/custom/custom.component.html
@@ -50,7 +50,9 @@
         <!--ALLOW TOKENS CHECKBOX ---------------------------- -->
         <div class="m-form__field--checkbox">
           <div
-            class="m-composerPopup__checkbox m-composerPopup__checkbox--allowTokens"
+            class="
+              m-composerPopup__checkbox m-composerPopup__checkbox--allowTokens
+            "
           >
             <m-formInput__checkbox formControlName="has_tokens">
               <span i18n="@@COMPOSER__MONETIZE_CUSTOM__ALLOW_TOKENS"
@@ -80,8 +82,7 @@
       type="button"
       (onAction)="save()"
       i18n="@@COMMON__SAVE"
+      >Save</m-button
     >
-      Save
-    </m-button>
   </div>
 </ng-container>
