--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -7,9 +7,12 @@
 </h5>
 
 <ul class="m-groupSidebarMarkers__list m-scroll__thin" #list>
-  <li style="display:flex">
+  <li style="display: flex">
     <a
-      class="m-groupSidebarMarkersList__item m-groupSidebarMarkersList__item--newGroup"
+      class="
+        m-groupSidebarMarkersList__item
+        m-groupSidebarMarkersList__item--newGroup
+      "
       [routerLink]="['/groups/create']"
     >
       <m-tooltip
@@ -20,23 +23,23 @@
         <i class="material-icons" m-tooltip--anchor>add</i>
         <span i18n="@@M__COMMON__NEW_GROUP">New Group</span>
 
-        <ng-container i18n="@@M__COMMON__NEW_GROUP">
-          New Group
-        </ng-container>
+        <ng-container i18n="@@M__COMMON__NEW_GROUP">New Group</ng-container>
       </m-tooltip>
       <span
         class="m-groupSidebarMarkersListItem__label"
         i18n="@@M__COMMON__NEW_GROUP"
         *ngIf="showLabels"
+        >New Group</span
       >
-        New Group
-      </span>
     </a>
   </li>
 
   <li *ngIf="!inProgress && groups && groups.length > 0">
     <a
-      class="m-groupSidebarMarkersList__item  m-groupSidebarMarkersList__item--discoverGroups"
+      class="
+        m-groupSidebarMarkersList__item
+        m-groupSidebarMarkersList__item--discoverGroups
+      "
       [routerLink]="
         hasNewNavigation
           ? ['/discovery/suggestions/group']
@@ -51,18 +54,17 @@
         <i class="material-icons" m-tooltip--anchor>people</i>
         <span i18n="@@M__COMMON__DISCOVER_GROUPS">Discover Groups</span>
 
-        <ng-container i18n="@@M__COMMON__DISCOVER_GROUPS">
-          Discover Groups
-        </ng-container>
+        <ng-container i18n="@@M__COMMON__DISCOVER_GROUPS"
+          >Discover Groups</ng-container
+        >
       </m-tooltip>
       <span
         class="m-groupSidebarMarkersListItem__label"
         i18n="@@M__COMMON__DISCOVER_GROUPS"
         *ngIf="showLabels"
         i18n="@@M__COMMON__DISCOVER_GROUPS"
+        >Discover Groups</span
       >
-        Discover Groups
-      </span>
     </a>
   </li>
 
