--- a/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
+++ b/src/app/modules/settings-v2/account/autoplay-videos/autoplay-videos.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__ACCOUNT__AUTOPLAY__LABEL"
-  >
-    Autoplay Videos
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__ACCOUNT__AUTOPLAY__LABEL">Autoplay Videos</span>
   </div>
   <div
     class="m-settingsV2__desc"
