--- a/src/app/modules/settings-v2/account/email-address/email-address.component.html
+++ b/src/app/modules/settings-v2/account/email-address/email-address.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__ACCOUNT__EMAIL__LABEL"
-  >
-    Email Address
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__ACCOUNT__EMAIL__LABEL">Email Address</span>
   </div>
   <div
     class="m-settingsV2__desc"
