--- a/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
+++ b/src/app/modules/settings-v2/account/email-notifications/email-notifications.component.html
@@ -1,9 +1,8 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__NOTIFICATIONS__EMAIL__LABEL"
-  >
-    Email Notifications
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__NOTIFICATIONS__EMAIL__LABEL"
+      >Email Notifications</span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
