--- a/src/app/modules/settings-v2/account/language/language.component.html
+++ b/src/app/modules/settings-v2/account/language/language.component.html
@@ -1,9 +1,11 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__ACCOUNT__LANGUAGE__LABEL"
-  >
-    Language Settings
+  <div class="m-settingsV2__headerLabel">
+    <span
+      ><ng-container i18n="@@SETTINGS__ACCOUNT__LANGUAGE__LABEL"
+        >Language</ng-container
+      >
+      <ng-container i18n="@@COMMON__SETTINGS">Settings</ng-container></span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
