--- a/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
+++ b/src/app/modules/settings-v2/account/notifications-v3/push-notifications/push-notifications.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS_NOTIFICATIONS_PUSH__LABEL"
-  >
-    Push Notifications
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS_NOTIFICATIONS_PUSH__LABEL">Push Notifications</span>
   </div>
   <div
     class="m-settingsV2__desc"
@@ -15,7 +12,10 @@
 <m-loadingSpinner [inProgress]="initializing$ | async"></m-loadingSpinner>
 <ng-container *ngIf="!(initializing$ | async)">
   <div
-    class="m-pushNotifSettings__optionContainer m-pushNotifSettings__optionContainer--horizontal"
+    class="
+      m-pushNotifSettings__optionContainer
+      m-pushNotifSettings__optionContainer--horizontal
+    "
     *ngIf="getToggle('all')"
   >
     <m-toggle
@@ -36,7 +36,10 @@
   </h5>
 
   <div
-    class="m-pushNotifSettings__optionContainer m-pushNotifSettings__optionContainer--horizontal"
+    class="
+      m-pushNotifSettings__optionContainer
+      m-pushNotifSettings__optionContainer--horizontal
+    "
     *ngFor="let option of getDynamicToggles()"
   >
     <m-toggle
