--- a/src/app/modules/settings-v2/account/profile/profile.component.html
+++ b/src/app/modules/settings-v2/account/profile/profile.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__ACCOUNT__PROFILE__LABEL"
-  >
-    Profile
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__ACCOUNT__PROFILE__LABEL">Profile</span>
   </div>
   <div
     class="m-settingsV2__desc"
