--- a/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
+++ b/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
@@ -1,9 +1,8 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__NOTIFICATIONS__POPOVERS__LABEL"
-  >
-    Notification Popovers
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__NOTIFICATIONS__POPOVERS__LABEL"
+      >Notification Popovers</span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
