--- a/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
+++ b/src/app/modules/settings-v2/billing/recurring-payments/recurring-payments.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__BILLING__RECURRING__LABEL"
-  >
-    Recurring Payments
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__BILLING__RECURRING__LABEL">Recurring Payments</span>
   </div>
   <div
     class="m-settingsV2__desc"
