--- a/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
+++ b/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
@@ -1,9 +1,8 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__OTHER__CONTENTADMIN__BLOCKED__LABEL"
-  >
-    Blocked Channels
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__OTHER__CONTENTADMIN__BLOCKED__LABEL"
+      >Blocked Channels</span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
