--- a/src/app/modules/settings-v2/other/delete-account/delete-account.component.html
+++ b/src/app/modules/settings-v2/other/delete-account/delete-account.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__OTHER__LEAVE__DELETE__LABEL"
-  >
-    Delete Account
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__OTHER__LEAVE__DELETE__LABEL">Delete Account</span>
   </div>
   <div
     class="m-settingsV2__desc"
