--- a/src/app/modules/settings-v2/other/referrals/referrals.component.html
+++ b/src/app/modules/settings-v2/other/referrals/referrals.component.html
@@ -5,11 +5,8 @@
       ><span i18n="@@COMMON__ACTIONS__BACK">Back</span>
     </a>
   </div>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__OTHER__REFERRALS__LABEL"
-  >
-    Referrals
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__OTHER__REFERRALS__LABEL">Referrals</span>
   </div>
 </div>
 
