--- a/src/app/modules/settings-v2/other/reported-content/reported-content.component.html
+++ b/src/app/modules/settings-v2/other/reported-content/reported-content.component.html
@@ -1,9 +1,8 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__OTHER__CONTENTADMIN__REPORTED__LABEL"
-  >
-    Reported Content
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__OTHER__CONTENTADMIN__REPORTED__LABEL"
+      >Reported Content</span
+    >
   </div>
   <div
     class="m-settingsV2__desc"
