--- a/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
+++ b/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
@@ -1,9 +1,6 @@
 <m-settingsV2__header>
-  <div
-    class="m-settingsV2__headerLabel"
-    i18n="@@SETTINGS__PRO__HASHTAGS__LABEL"
-  >
-    Hashtags
+  <div class="m-settingsV2__headerLabel">
+    <span i18n="@@SETTINGS__PRO__HASHTAGS__LABEL">Hashtags</span>
   </div>
   <div class="m-settingsV2__desc" i18n="@@SETTINGS__PRO__HASHTAGS__DESCRIPTION">
     Set up your category filter hashtags.
